fix projects on mobile

--- a/src/scss/includes/responsive-320-739.scss
+++ b/src/scss/includes/responsive-320-739.scss
@@ -204,7 +204,8 @@
 
   .slider__gradient{  margin: 0 auto;  }
 
-  .project{  flex: 0 0 100%;  margin-bottom: -20px; }
+  .project{  flex: 0 0 100%;  margin-bottom: -20px;
+    margin-top: 50px;}
 
   .projects-slider{  padding: 0 30px;  }
 
